fixed layout issue on plants list page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,3 +104,24 @@ a {
 @media only screen and (min-width: 1920px) {
   /* your css goes here */
 }
+
+/* ----------- Non-Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+    .box-container {
+      max-width: 275px;
+    }
+}
+
+/* ----------- Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+    .box-container {
+      max-width: 275px;
+    }
+}
